--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dicee</title>
 	<link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster" rel="stylesheet">
@@ -16,12 +15,12 @@
 
 		<div class="dice">
 			<p>Player 1</p>
-			<img src="images/dice6.png" alt="Dice6">
+			<img src="dice6.png" alt="Dice6">
 		</div>
 
 		<div class="dice">
 			<p>Player 2</p>
-			<img src="images/dice6.png" alt="Dice6">
+			<img src="dice6.png" alt="Dice6">
 		</div>
 	</div>
 
