--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Dicee</title>
+	<title>The Dice Game</title>
 	<link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster" rel="stylesheet">
 
@@ -29,6 +29,6 @@
 </body>
 
 <footer>
-	www 🎲 App Brewery 🎲 com
+	🎲 Created By Bhoumik P. 🎲 
 </footer>
 </html>		
