Change class to dice 1 and 2

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<div class="container">
 		<h1>Refresh Me</h1>
 
-		<div class="dice">
+		<div class="dice dice1">
 			<p>Player 1</p>
 			<img src="dice6.png" alt="Dice6">
 		</div>
 
-		<div class="dice">
+		<div class="dice dice2">
 			<p>Player 2</p>
 			<img src="dice6.png" alt="Dice6">
 		</div>
