--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
 
 	<div class="container">
-		<h1>Refresh Me</h1>
+		<h1>Press Space</h1>
 
+		<div>
+			<button>Click</button>
+		</div>
+		
 		<div class="dice dice1">
 			<p>Player 1</p>
 			<img src="dice6.png" alt="Dice6">
