--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		
 		<div class="dice dice1">
 			<p>Player 1</p>
-			<img src="dice6.png" alt="Dice6">
+			<img src="images/dice6.png" alt="Dice6">
 		</div>
 
 		<div class="dice dice2">
 			<p>Player 2</p>
-			<img src="dice6.png" alt="Dice6">
+			<img src="images/dice6.png" alt="Dice6">
 		</div>
 	</div>
 
