--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<title>The Dice Game</title>
 	<link rel="stylesheet" href="style.css">
-       <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster" rel="stylesheet">
-
+   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster" rel="stylesheet">
 </head>
 <body>
 
 	<div class="container">
 		<h1>Press Space</h1>
-
-		
 		
 		<div class="dice dice1">
-			<p>Player 1</p>
+			<p id="player1"></p>
 			<img src="images/dice6.png" alt="Dice6">
 		</div>
 
 		<div class="dice dice2">
-			<p>Player 2</p>
+			<p id="player2"></p>
 			<img src="images/dice6.png" alt="Dice6">
 		</div>
 	</div>
 
 	<script src="index.js"></script>
-
 </body>
-
 <footer>
 	🎲 Created By Bhoumik P. 🎲 
 </footer>
